# ToDoList

./: .gitignore  Activity.cpp  Activity.h  ActivityList.cpp  ActivityList.h  CMakeLists.txt  Category.cpp  Category.h  TimeDate.cpp  TimeDate.h  TimeDateException.cpp  TimeDateException.h  TxtFile.cpp  TxtFile.h  UserInterface.cpp  UserInterface.h  main.cpp
test/: CMakeLists.txt  CategoryFixture.cpp  TimeDateFixture.cpp  TxtFileFixture.cpp  readTestFile.txt  runAllTest.cpp
